--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
