--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -148,3 +148,8 @@ disableTextInHeader = false
   # bing = ""
   # pinterest = ""
   # yandex = ""
+
+[umami]
+  enable = true
+  website_id = "94ab2f1d-97de-462e-a613-2ee64f3bc2d1"
+  url = "https://umami.yalin.dev/umami.js"
